fixed padding on a tag that was too small

--- a/packages/docs/src/components/sidebar/sidebar.css
+++ b/packages/docs/src/components/sidebar/sidebar.css
@@ -119,7 +119,7 @@ details li a {
 
 .menu li a {
   color: var(--secondary-text-color);
-  padding: 0.5rem 12px;
+  padding: 0.5rem 15px;
   border-radius: 4px;
 }
 
